<resources>
    <string name="app_name">Tetris</string>
    <string name="tetris">Tetris</string>
    <string name="start_game">Start Game</string>
    <string name="high_score">High Score</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="about">About</string>
    <string name="game_info">Classic Tetris brought to Android</string>
    <string name="music">Music</string>
    <string name="sets">Settings</string>
    <string name="game_over">Game Over</string>
    <string name="share_score">Share Score</string>
    <string name="points">You scored </string>
    <string name="game_details">ABOUT</string>
    <string name="flip">Rotate</string>
    <string name="retry">Retry</string>
    <string name="scores">High Scores</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="player_three">Player 4</string>
    <string name="position_one">1.</string>
    <string name="position_two">2.</string>
    <string name="position_three">3.</string>
    <string name="score_1">Score 1</string>
    <string name="score_2">Score 2</string>
    <string name="score_3">Score 3</string>
    <string name="total_points">456 </string>
    <string name="p">Points</string>
    <string name="new_top_score">! New High Score !</string>
    <string name="points_text">Points:</string>
    <string name="current_points">0</string>
    <string name="enter_your_name">Enter Your Name:</string>
    <string name="name">Name</string>
    <string name="player_name">Player Name</string>
    <string name="game_paused">Game Paused</string>
    <string name="resume">Resume</string>
    <string name="quit">Quit</string>
    <string name="restart">Restart</string>
</resources>