<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/game_pause"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/background_gradient">

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        style="@style/Content"
        android:layout_gravity="center"
        android:text="@string/game_paused"/>

    <Button
        android:id="@+id/resume_button"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/lunchtime_doubly_so_regular"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:text="@string/resume"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <Button
        android:id="@+id/quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/lunchtime_doubly_so_regular"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:text="@string/quit"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <Button
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/lunchtime_doubly_so_regular"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:text="@string/restart"
        style="@style/Widget.AppCompat.Button.Borderless"/>

</LinearLayout>